src/assets/styles/Project.scss
.projects-container {
    padding: 40px;
    text-align: center;
}

.projects-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
    gap: 30px;
    justify-items: center;
    margin-top: 30px;
}

.project-link {
    text-decoration: none;
}

.project-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #fff;
    border: 1px solid #ddd;
    padding: 20px;
    border-radius: 12px;
    height: 350px; 
    width: 300px; 
    text-align: center;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    cursor: pointer;
}

.project-box:hover {
    transform: translateY(-5px);
    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
}

.project-icon {
    background-color: #f1f1f1;
    border-radius: 50%;
    padding: 20px;
    margin-bottom: 15px;
    display: inline-block;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    color: black; 
}

.project-details {
    text-align: center;
}

.project h2 {
    font-size: 20px;
    font-weight: 600;
    color: #333;
    margin-bottom: 10px;
}

.project p {
    font-size: 14px;
    color: #555;
    max-width: 200px;
    margin: 0 auto;
}

.project-icon:hover {
    background-color: #e0e0e0;
    transform: scale(1.1);
    transition: background-color 0.3s ease, transform 0.3s ease;
}

.project-icon svg {
    color: black; 
}

